# boxlite

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.claude/agents/: commit-push-auditor.md
.claude/hooks/: commit-push-audit.schema.json  preflight-commit-push.sh  preflight-commit-push.test.sh  run-commit-push-audit.sh
.codex/: hooks.json
.githooks/: commit-msg  githooks.test.sh  pre-commit  pre-push
.github/: CODEOWNERS
.github/workflows/: api-client-drift.yml  build-node.yml  build-runtime.yml  build-wheels.yml  config.yml  lint.yml  publish-boxlite-cloud-images.yml  test.yml  warm-caches.yml
apps/: eslint.config.mjs  package.json  tsconfig.base.json
apps/api/: Dockerfile  eslint.config.mjs
apps/api-client-go/: api_admin.go  api_audit.go  api_auth.go  api_box.go  api_box_lite_rest.go  api_health.go  api_jobs.go  api_organizations.go  api_preview.go  api_runners.go  api_snapshots.go  api_toolbox.go  api_workspace.go  client.go  configuration.go  model_account_provider.go  model_admin_create_runner.go  model_announcement.go  model_api_key_list.go  model_api_key_response.go  model_audit_log.go  model_box.go  model_box_class.go  model_box_desired_state.go  model_box_info.go  model_box_labels.go  model_box_state.go  model_box_volume.go  model_boxlite_configuration.go  model_build_info.go  model_command.go  model_completion_context.go  model_completion_item.go  model_completion_list.go  model_compressed_screenshot_response.go  model_computer_use_start_response.go  model_computer_use_status_response.go  model_computer_use_stop_response.go  model_create_api_key.go  model_create_box.go  (+151 more)
apps/api-client-go/.openapi-generator/: FILES
apps/api-client-go/api/: openapi.yaml
apps/api/src/: app.module.ts  app.service.ts  generate-openapi.ts  openapi-webhooks.ts
apps/cli/: go.mod  go.sum  main.go
apps/cli/docs/: boxlite.md  boxlite_create.md
apps/cli/internal/: cmd.go
apps/cli/mcp/: README.md  server.go
apps/cli/toolbox/: toolbox.go
apps/dashboard/: CLAUDE.md  RESTYLE_PLAN.md  index.html  project.json  tailwind.config.js  tsconfig.app.json
apps/dashboard/src/: App.tsx  index.css
apps/infra/: .env.example  README.md  sst.config.ts
apps/infra-local/: Makefile
apps/infra-local/compose/: _local_arm64.py  config.py  native.py  orchestrator.py
apps/infra-local/scripts/: stack-up.sh
apps/libs/analytics-api-client/: project.json  swagger.json
apps/libs/sdk-typescript/: README.md  jest.config.js  package.json
apps/otel-collector/: config.dev.yaml  config.yaml
apps/otel-collector/exporter/: config.go  exporter.go  factory.go
apps/runner/: README.md
apps/ssh-gateway/: README.md  main.go
assets/logo/: README.md
boxlite/: Cargo.toml  build.rs
boxlite-cli/: Cargo.toml
boxlite-cli/src/: cli.rs  main.rs
boxlite-cli/src/commands/: mod.rs  rm.rs
boxlite-cli/tests/: create.rs  list.rs
boxlite-cli/tests/common/: mod.rs
boxlite-shared/: Cargo.toml  build.rs
boxlite-shared/proto/boxlite/v1/: service.proto
boxlite-shared/src/: constants.rs  errors.rs  layout.rs  lib.rs
boxlite/examples/: disk_attachment_test.rs
boxlite/src/: lib.rs
boxlite/src/controller/: log_stream.rs  mod.rs  shim.rs  spawn.rs
boxlite/src/db/: images.rs  schema.rs
boxlite/src/disk/: constants.rs  ext4.rs  image.rs  mod.rs  qcow2.rs
boxlite/src/images/: blob_source.rs  config.rs  index.rs  manager.rs  mod.rs  object.rs  storage.rs  (+1 more)
boxlite/tests/: exec_user.rs  health_check.rs  lifecycle.rs  management.rs  networking.rs  pid_file.rs  restart.rs  runtime.rs  runtime_lock.rs  snapshot.rs
docs/: README.md  faq.md
docs/architecture/: README.md
docs/design/: restart.md
docs/development/: restart.md
docs/getting-started/: README.md  quickstart-c.md
docs/guides/: README.md  macos-sandbox-debugging.md
docs/reference/: README.md
examples/c/: 01_lifecycle.c  02_list_boxes.c  03_streaming_output.c  04_error_handling.c  05_metrics.c  CMakeLists.txt  README.md  execute.c  shutdown.c  simple_api_demo.c
examples/node/: browserbox.js  browserbox_puppeteer.js  custom_registry.js  local_oci_bundle.js  package.json
examples/python/: README.md  browserbox_example.py  browserbox_playwright.py  browserbox_puppeteer.py  codebox_example.py  computerbox_example.py  cross_process_example.py  custom_registry_example.py  interactivebox_example.py  local_oci_bundle_example.py  native_example.py  simplebox_example.py  sync_codebox_example.py  sync_native_example.py  sync_simplebox_example.py
ffi/: Cargo.toml
ffi/src/: ops.rs
guest/: Cargo.toml
guest/src/: main.rs
guest/src/container/: command.rs  console_socket.rs  lifecycle.rs  mod.rs  spec.rs  start.rs
guest/src/service/: container.rs  guest.rs  mod.rs  server.rs
guest/src/service/exec/: exec_handle.rs  executor.rs  mod.rs  registry.rs  state.rs
guest/src/storage/: block_device.rs  mod.rs  virtiofs.rs  volume.rs
images/agent-runtime/: base.Dockerfile  node.Dockerfile  python.Dockerfile
make/: changes.mk  dist.mk  help.mk  quality.mk  setup.mk  test.mk
openapi/reference-server/: .env.example  README.md  config.py  server.py
scripts/: clean.sh  colors.sh  common.sh  util.sh
scripts/images/: build-agent-runtime.sh  create-oci-bundle.sh
scripts/package/: package-common.sh  package-linux.sh  package-macos.sh
scripts/setup/: setup-common.sh  setup-macos.sh  setup-manylinux.sh  setup-musllinux.sh  setup-test.sh  setup-ubuntu.sh
sdks/c/: CHANGELOG.md  Cargo.toml  QUICK_REFERENCE.md  README.md  REVAMP_SUMMARY.md  build.rs
sdks/c/include/: boxlite.h
sdks/c/src/: ffi.rs  info.rs  lib.rs  runtime.rs
sdks/c/src/exec/: simple.rs
sdks/c/tests/: CMakeLists.txt  test_basic.c  test_errors.c  test_execute.c  test_integration.c  test_lifecycle.c  test_memory.c  test_simple_api.c  test_streaming.c
sdks/go/: exec.go  exec_integration_test.go  exec_sigpipe_integration_test.go
sdks/go/rust/: Cargo.toml
sdks/node/: README.md  package.json
sdks/python/: Cargo.toml  build.rs  pyproject.toml
src/boxlite/: Cargo.toml
src/cli/: Cargo.toml  README.md
(+1089 files in other folders)
