[package]
name = "boxlite-shared"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
prost = "0.13"
tonic = "0.12"
tokio = { version = "1", features = ["io-util"] }

[build-dependencies]
tonic-build = "0.12"
