[package]
name = "boxlite-c"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C SDK for Boxlite runtime"

[lib]
name = "boxlite"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
gvproxy-backend = ["boxlite/gvproxy-backend"]
libslirp-backend = ["boxlite/libslirp-backend"]

[dependencies]
boxlite = { path = "../../boxlite" }

tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"
futures = "0.3"

[build-dependencies]
cbindgen = "0.29"
